# meandmyshadow

./: .gitignore  .travis.yml  .travis.yml.backup  AUTHORS  AndroidAppSettings.cfg  Block.cpp  CMakeLists.txt  ChangeLog  Classes.h  Controls.txt  Functions.cpp  Game.cpp  GameObjects.cpp  Globals.h  LevelEditor.cpp  LevelSelect.cpp  Levels.cpp  Main.cpp  Makefile  Objects.h  Player.cpp  README  README.md  StartObjects.cpp  ThemeDescription.txt  Timer.cpp  Title_Menu.cpp  _config.yml  appveyor-dep.yml  appveyor.yml  appveyor.yml-build-dependencies  download.html  feed.xml  index.html  meandmyshadow.desktop  meandmyshadow.xpm  media.html  pkg2appimage.yml  test1.txt
.tx/: config
_drafts/: 2014-10-18-welcome-to-jekyll.markdown
_includes/: about.html  footer.html  head.html
_layouts/: default.html  page.html  post.html
_posts/: 2012-06-18-welcome-to-our-new-website.md  2012-07-25-me-and-my-shadow-0-4-released.md  2018-06-30-port-to-jekyll.markdown  2018-08-06-status-of-0-5-development-version.markdown  2018-08-25-me-and-my-shadow-0-5-beta-released.markdown  2018-09-12-me-and-my-shadow-0-5-rc-released.markdown  2018-09-15-temporary-removal-of-some-addons-with-unclear-licenses.markdown  2018-09-30-me-and-my-shadow-0-5-rc2-released.markdown  2018-10-07-me-and-my-shadow-0-5-released.markdown  2018-11-03-me-and-my-shadow-0-5a-released.markdown
_sass/: _old.scss
cmake/Modules/: FindSDL2_gfx.cmake  FindSDL2_mixer.cmake  module_licences.md
css/: Credits.txt  main.scss
data/: Credits.txt
data/font/: License
data/gfx/: Thumbs.db
data/gfx/blocks/: theme.mnmstheme
data/level/: BabySteps.map  Carry.map  Control.map  Credits.map  Damn.map  End.map  FirstSpikes.map  FreeFall.map  FreeFall2.map  Here.map  Jumper.map  Jumping.map  Lab.map  LeftRight.map  LittleHelp.map  Road.map  Shadow.map  ShadowBlocks.map  SomeSpikes.map  Spiky.map  Timing.map  Tower.map  Tricky.map  UpDown.map  leveledit.map  leveledit2.map  levellist.lst  levellist.txt
data/levelpacks/classic/: FreeFall2.map  Headache.map  LeftRight.map  leveledit.map  levels.lst
data/levelpacks/classic/locale/: ar.po  de.po  el.po  es.po  fi.po  fr.po  gd.po  hu.po  it.po  messages.pot  nb.po  nl.po  pl.po  pt.po  ru.po  th.po  uk.po  zh_CN.po  zh_Hant.po
data/levelpacks/cooperation/: box_this_up.map  bridge_over_troubled_waters.map  brittle.map  diamonds.map  easter_egg_hunt.map  going_home.map  levels.lst  mirror.map  obstacle_course.map  over_land_and_sea.map  prison_break.map  pushover.map  rats_in_a_maze.map  self_sacrifice.map  shadow_switch.map  skyline.map  stacks.map  swap.map  switches.map  the_great_flood.map  trap_dance.map
data/levelpacks/cooperation/locale/: de.po  es.po  fi.po  fr.po  hu.po  it.po  messages.pot  nb_NO.po  nl.po  pl.po  pt.po  ru.po  zh_CN.po  zh_Hant.po
data/levelpacks/default/: 2.map  Damn.map  Jumping.map  levels.lst
data/levelpacks/default/locale/: ar.po  de.po  el.po  es.po  fi.po  fr.po  gd.po  hu.po  it.po  messages.pot  nb.po  nl.po  pl.po  pt.po  ru.po  th.po  uk.po  zh_CN.po  zh_Hant.po
data/levelpacks/tutorial/: levels.lst  tut01.map  tut02.map  tut03.map  tut04.map  tut05.map  tut06.map  tut07.map  tut08.map  tut09.map  tut10.map  tut11.map  tut12.map  tut13.map  tut14.map  tut15.map  tut16.map  tut17.map  tut18.map  tut19.map  tut20.map  tut21.map  tut22.map  tut23.map  tut24.map  tut25.map
data/levelpacks/tutorial/locale/: ar.po  de.po  el.po  es.po  fi.po  fr.po  gd.po  hu.po  it.po  messages.pot  nb.po  nl.po  pl.po  pt.po  ru.po  th.po  uk.po  zh_CN.po  zh_Hant.po
data/levels/: Abitoff.map  Gauntlet.map  QuantumTunnel.map  Reflection.map  ShiftingSands.map  SkyHigh.map  StairwaytoHell.map
data/locale/: ar.po  de.po  el.po  es.po  fi.po  fr.po  gd.po  hu.po  it.po  messages.pot  nb.po  nl.po  pl.po  pt.po  ru.po  th.po  uk.po  zh_CN.po  zh_Hant.po  zh_TW.po
data/music/: haunted.music  neverending.music  theatre.music
data/sfx/: Credits.txt
data/themes/Cloudscape/: Credits  License  theme.mnmstheme
data/themes/classic/: theme.mnmstheme
data/themes/default/: theme.mnmstheme
docs/: Compiling.txt  Controls.md  Controls.txt  ScriptAPI.md  ScriptAPI.txt  ThemeDescription.md  ThemeDescription.txt
media/: pushable-bug.webm  pushable-demo.webm  pushable-early.webm
src/: AchievementList.cpp  AchievementList.h  Addons.cpp  Addons.h  Block.cpp  Block.h  CachedTexture.h  Classes.h  CommandManager.cpp  CommandManager.h  Commands.cpp  Commands.h  CreditsMenu.cpp  CreditsMenu.h  Cursors.h  EasterEggScreen.cpp  EasterEggScreen.h  FakeLuaLexer.cpp  FakeLuaLexer.h  FileDownload.cpp  FileDownload.h  FileManager.cpp  FileManager.h  FontManager.cpp  FontManager.h  Functions.cpp  Functions.h  GUIListBox.cpp  GUIListBox.h  GUIMultilineLabel.cpp  GUIMultilineLabel.h  GUIObject.cpp  GUIObject.h  GUIOverlay.cpp  GUIOverlay.h  GUIScrollBar.cpp  GUIScrollBar.h  GUISlider.cpp  GUISlider.h  GUISpinBox.cpp  (+104 more)
src/libs/SDL2_ttf/: SDL_ttf.c  SDL_ttf.h  SDL_ttf_fontfallback.c  SDL_ttf_fontfallback.h
src/libs/findlocale/: findlocale.c  findlocale.cpp  findlocale.h
src/libs/tinyformat/: tinyformat.cpp  tinyformat.h
src/libs/tinygettext/: dictionary_manager.cpp  language.cpp  language.hpp  plural_forms.cpp  po_parser.cpp  po_parser.hpp  unix_file_system.cpp
src/mac/meandmyshadow/: meandmyshadow-Info.plist  meandmyshadow-Prefix.pch  osx_helpers.mm
src/mac/meandmyshadow.xcodeproj/: project.pbxproj
src/mac/meandmyshadow.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
tools/: extract_pot.py  messages.pot.sh
windows-icon/: meandmyshadow.xcf
